# solana-rabbitx-contract

./: README.md
solana/rbx/: .env  Anchor.toml  BEFxozfDEmeviyjH9LFXqr321xR4rZv9YcJLjUMDDUge.json  README.md  admin-keypair.json  comparison  debug  deploy-keypair-secrets  deploy-keypair.json  discriminator-test.js  package-lock.json  package.json  test_output  testnet-deploy-keypair.json  timelock-keypair.json  tsconfig.json  wallet-keypair.json
solana/rbx/go/: README.md  go.mod  go.sum
solana/rbx/go/cmd/event-listener/: main.go
solana/rbx/go/cmd/event-poller/: main.go
solana/rbx/go/cmd/transaction-lister/: main.go
solana/rbx/programs/rbx/: Cargo.toml
solana/rbx/programs/rbx/src/: lib.rs
solana/rbx/scripts/: check-state.ts  deposit-for.ts  deposit.ts  init.ts  initialize-state.ts  set-withdrawal-signer.ts  stake.ts  withdraw.ts
solana/rbx/tests/: all.ts  basic-setup.ts  deposit-for-operations.ts  deposit-operations.ts  stake-operations.ts  timelock-operations.ts  utils.ts  withdraw-operations.ts
solana/rbx/tests_copy/: basic-setup.ts  common-setup.ts  deposit-withdraw copy  deposit-withdraw-operations.ts  timelock-operations.ts  utils.ts
solana/rbx/tools/deposit-script/: deposit-sol.ts  package.json  tsconfig.json
